# help-me-write-better

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.json
.github/workflows/: ci.yml
addins/google-docs/: README.md  appsscript.json  package.json
addins/word/: README.md  manifest.xml  package.json
api/: index.py
clients/desktop/: README.md  package.json
clients/mobile/: README.md  package.json
docs/: DEPLOY.md  PLATFORM.md  PRICING.md  comparison.md
docs/decisions/: ADR-001-plagiarism-vendor.md  ADR-002-csl.md
docs/features/: citations.md  creative.md  plagiarism.md  templates.md
evals/: character_voice_eval.py  continuity_eval.py  voice_consistency_eval.py
extension/: README.md  manifest.json  package.json
extension/src/: background.js  content.js  core.js  options.html  options.js  popup.html  popup.js  styles.css
extension/test/: core.test.mjs
prompts/: operator_prompt.md
scripts/: smoke.sh
sdk/js/: README.md  package.json
src/write_better/: __init__.py  citation.py  cli.py  context.py  dbenv.py  demo.py  engine.py  features.py  landing.py  length.py  localize.py  modes.py  operator_prompt.md  plans.py  prompt.py  realtime.py  samples.py  scrub.py  seo.py  templating.py  ui.py  voice.py  web.py
surfaces/desktop/: README.md
surfaces/desktop/src-tauri/: Cargo.toml  tauri.conf.json
surfaces/desktop/src-tauri/icons/: generate_icon.py
surfaces/desktop/src-tauri/src/: main.rs
surfaces/extension/: README.md  background.js  config.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
surfaces/google-docs/: Code.gs  README.md  Sidebar.html  appsscript.json
surfaces/word/: README.md  (+4 more)
tests/: test_account_ui.py  test_admin_unlimited.py  test_adoption_events.py  test_analytics.py  test_analytics_events.py  test_app_login_gate.py  test_citation.py  test_citation_styles.py  test_context.py  test_creative.py  test_db.py  test_dbenv.py  test_demo.py  test_desktop.py  test_dictate.py  test_dictionary.py  test_editor_surfacing.py  test_engine.py  test_everyday_templates.py  test_extension.py  test_landing.py  test_login_ui.py  test_marketing_templates.py  test_modes.py  test_office_addins.py  test_openapi.py  test_password_reset.py  test_plans.py  test_platform.py  test_platform_auth.py  test_platform_docs.py  test_platform_strays.py  test_pr6_events.py  test_pricing_ui.py  test_realtime.py  test_reply.py  test_samples.py  test_scans.py  test_scrub.py  test_security_headers.py  (+12 more)
(+100 files in other folders)
