[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "help-me-write-better"
version = "0.1.0"
description = "A bundled write-better + format engine built on Claude — improves and formats text while preserving meaning and voice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
write-better = "write_better.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the operator prompt as package data.
"write_better" = ["operator_prompt.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
