[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "help-me-write-better"
version = "0.1.0"
description = "A bundled write-better + format engine built on Claude — improves and formats text while preserving meaning and voice."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    # Postgres driver, in the CORE deps so it installs regardless of whether the
    # host reads requirements.txt or pyproject (e.g. Vercel). Only used when a
    # DATABASE_URL / POSTGRES_URL is configured; harmless otherwise.
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Kept for back-compat (`pip install .[postgres]`); psycopg is now a core dep.
postgres = ["psycopg[binary]>=3.1"]

[project.scripts]
write-better = "write_better.cli:main"
write-better-admin = "write_better.platform.admin:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the operator prompt and template library as package data.
"write_better" = ["operator_prompt.md", "templates/**/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
